openshift-dev-spaces/instance/base/allow-webhook-from-apiserver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webhook-from-apiserver
spec:
  ingress:
    - ports:
      - protocol: TCP
        port: 9443
  podSelector: {}
  policyTypes:
  - Ingress
